Fusion-Qa-Final/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Received_Logo_Date__c</fullName>
        <label>Received Logo Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_Logo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received Logo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Received_Resell_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received Resell Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Group__c</fullName>
        <label>Sales Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>College Bookstore</fullName>
                </value>
                <value>
                    <fullName>Motorsports</fullName>
                </value>
                <value>
                    <fullName>Promotional</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Conservation</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <label>Sales Order</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Order__c</fullName>
        <formula>IF(RecordType.Name = &apos;Sample Order&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sample Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_To_ERP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send To ERP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_To_ERP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent To ERP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_By_Date__c</fullName>
        <formula>Need_By_Date__c</formula>
        <label>Ship By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates the order to ship all product together.</description>
        <inlineHelpText>Designates the order to ship all product together.</inlineHelpText>
        <label>Ship Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_To_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Ship_To__c</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Ship To Contact)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Account.ParentId</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Account.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Ship To)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipped_Date_after_Production_Date__c</fullName>
        <label>Shipped Date after Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <formula>IF(Ship_To__c=&apos;&apos;, Account.ShippingStreet + BR() + Account.ShippingCity + &apos;, &apos; + Account.ShippingState + &apos;, &apos; + Account.ShippingPostalCode + BR() + Account.ShippingCountry, Ship_To__r.ShippingStreet + BR() + Ship_To__r.ShippingCity + &apos;, &apos; + Ship_To__r.ShippingState + &apos;, &apos; + Ship_To__r.ShippingPostalCode + BR() + Ship_To__r.ShippingCountry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Confirmation_Sent_To_Customer__c</fullName>
        <label>Shipping Confirmation Sent To Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sold_To_Address__c</fullName>
        <label>Sold To Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Sales_Group__c</fullName>
        <label>Sub Sales Group</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sales_Group__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BF&amp;I</fullName>
                </value>
                <value>
                    <fullName>Healthcare &amp; Pharmaceuticals</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Internet Software &amp; Services</fullName>
                </value>
                <value>
                    <fullName>Oil/Gas/Utilities</fullName>
                </value>
                <value>
                    <fullName>Food and Beverage</fullName>
                </value>
                <value>
                    <fullName>Resort Lodge Hospitality</fullName>
                </value>
                <value>
                    <fullName>Entertainment and Sports</fullName>
                </value>
                <value>
                    <fullName>Retailers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tolling_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tolling Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UseOTS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use OTS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YETI_Oppty_to_Acct_Ownership_Check__c</fullName>
        <description>To Identify if Account Owner matches Opportunity Owner values</description>
        <formula>Account.OwnerId  =  OwnerId</formula>
        <label>YETI-Oppty to Acct Ownership Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ENSX_EDM__OrderNumber__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>PO_Number__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Order_Placed__c</columns>
        <columns>Need_By_Date__c</columns>
        <columns>Send_To_ERP__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>AllOpportunities_processing</fullName>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Send_To_ERP__c</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Order_Placed__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>PO_Number__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Need_By_Date__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Approved Prebook</value>
        </filters>
        <label>All Opportunities - Processing</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>Future_Orders</fullName>
        <columns>Need_By_Date__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>PO_Number__c</columns>
        <columns>Ship_To__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Pending Prebook</value>
        </filters>
        <label>Future Orders</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Sales_Order__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>PO_Number__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Sales_Order__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Opportunity_in_Queue</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>Sales_Order__c</columns>
        <columns>Ship_To__c</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>Need_By_Date__c</columns>
        <columns>PO_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Order__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>7/20/2016 12:00 AM</value>
        </filters>
        <label>Opportunity in Queue</label>
        <sharedTo>
            <group>System_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Sales_Order__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>PO_Number__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>BizDev_Outfitters_Fundraising</fullName>
        <active>true</active>
        <businessProcess>Business Development</businessProcess>
        <label>BizDev / Outfitters / Fundraising</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Development</fullName>
        <active>true</active>
        <businessProcess>Business Development</businessProcess>
        <description>Business Development</description>
        <label>Business Development</label>
    </recordTypes>
    <recordTypes>
        <fullName>Canada_Insides_Sales_Field_Sales</fullName>
        <active>true</active>
        <businessProcess>Default</businessProcess>
        <label>Canada Insides Sales/Field Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dealer</fullName>
        <active>true</active>
        <businessProcess>Default</businessProcess>
        <label>Dealer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inside_Sales_Field_Sales</fullName>
        <active>true</active>
        <businessProcess>Inside Sales%2FField Sales</businessProcess>
        <description>Inside Sales/Field Sales (to include Oppt Stages)</description>
        <label>Inside Sales/Field Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>International</fullName>
        <active>true</active>
        <businessProcess>Business Development</businessProcess>
        <label>International</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Account_Is_Not_An_ERP_Customer</fullName>
        <active>false</active>
        <description>The selected account is not a valid ERP customer.</description>
        <errorConditionFormula>AND(Send_To_ERP__c,NOT(ISPICKVAL(Account.00Ni0000008s42e,&apos;Customer&apos;)), Account.00Ni0000008s42l.Name &lt;&gt; &apos;Credit Card&apos;, RecordType.Name &lt;&gt; &apos;Sample Order&apos;)</errorConditionFormula>
        <errorMessage>The selected account is not a valid ERP customer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_On_Hold</fullName>
        <active>true</active>
        <description>This account is currently on hold.</description>
        <errorConditionFormula>AND(Send_To_ERP__c = true, Account.MarketingHold__c = true)</errorConditionFormula>
        <errorMessage>This account is currently on hold.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BillTo_contact_is_not_valid_ERP_contact</fullName>
        <active>false</active>
        <description>The selected primary contact does not existing in the ERP system.</description>
        <errorConditionFormula>AND(Contact__c != null, 00Ni000000AkJ5h.00Ni0000008s43Z = &apos;&apos;,Send_To_ERP__c)</errorConditionFormula>
        <errorMessage>The selected primary contact does not existing in the ERP system.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Create_Opp_for_Ship_TO</fullName>
        <active>false</active>
        <description>An opportunity cannot be created for a Ship To account.</description>
        <errorConditionFormula>Account.RecordType.Name == &apos;Ship To&apos;</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>An opportunity cannot be created for a Ship To account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Change_Opp_Owner_Validation</fullName>
        <active>true</active>
        <description>This Rule validates the users who change the ownership of the opportunities.</description>
        <errorConditionFormula>IF(AND($User.ProfileId &lt;&gt; $Label.YETI_Inside_Sales_Profile_ID,PRIORVALUE( OwnerId ) &lt;&gt; $User.Id, ISCHANGED(OwnerId)   ), true,false)</errorConditionFormula>
        <errorMessage>You cannot change the ownership for the records you don&apos;t own.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Credit_App_Not_Submitted</fullName>
        <active>false</active>
        <description>A credit application has not been submitted.</description>
        <errorConditionFormula>AND(Send_To_ERP__c = true, Account.Credit_Application__c = false, Account.00Ni0000008s42l.Name &lt;&gt; &apos;Credit Card&apos;, RecordType.Name &lt;&gt; &apos;Sample Order&apos;)</errorConditionFormula>
        <errorMessage>A credit application has not been submitted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Credit_Card_Expired</fullName>
        <active>false</active>
        <description>Credit card is expired or is not on file. Please enter new credit card information on this opportunity.</description>
        <errorConditionFormula>AND(PRIORVALUE(Send_To_ERP__c) = false, Send_To_ERP__c = true, Account.00Ni0000008s42l.Name = &apos;Credit Card&apos;, Account.Credit_Card_Expired__c = true, Credit_Card_Number__c = &apos;&apos;, RecordType.Name &lt;&gt; &apos;Sample Order&apos;)</errorConditionFormula>
        <errorMessage>Credit card is expired or is not on file. Please enter new credit card information on this opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Credit_Card_Info_Not_Completed</fullName>
        <active>false</active>
        <description>New credit card information has not been fully completed.</description>
        <errorConditionFormula>AND(RecordType.Name &lt;&gt; &apos;Sample Order&apos;, 
OR(NOT(ISBLANK(Credit_Card_Name__c)),NOT(ISPICKVAL(Credit_Card_Type__c,&apos;&apos;)),LEN(Credit_Card_Number__c) &lt;&gt; 0,NOT(ISPICKVAL(Credit_Card_Expiration_Month__c,&apos;&apos;)),NOT(ISPICKVAL(Credit_Card_Expiration_Year__c,&apos;&apos;)),NOT(ISBLANK(Credit_Card_CSC_Id__c))),
OR(ISBLANK(Credit_Card_Name__c),ISPICKVAL(Credit_Card_Type__c,&apos;&apos;),LEN(Credit_Card_Number__c) = 0,ISPICKVAL(Credit_Card_Expiration_Month__c,&apos;&apos;),ISPICKVAL(Credit_Card_Expiration_Year__c,&apos;&apos;),ISBLANK(Credit_Card_CSC_Id__c)))</errorConditionFormula>
        <errorMessage>New credit card information has not been fully completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Credit_Card_Not_Selected</fullName>
        <active>false</active>
        <description>A credit card must be selected or set as one time use for this opportunity before requesting an Epicor sales order.</description>
        <errorConditionFormula>AND(RecordType.Name != &apos;Sample Order&apos;, Account.00Ni0000008s42l.00Ni0000008s44D == &apos;CC&apos;, Chase_Profile_Id__c == &apos;&apos;,  Send_To_ERP__c, NOT(PRIORVALUE(Send_To_ERP__c)))</errorConditionFormula>
        <errorMessage>A credit card must be selected or set as one time use for this opportunity before requesting an Epicor sales order.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_on_Credit_Hold</fullName>
        <active>false</active>
        <description>This account is on credit hold.</description>
        <errorConditionFormula>AND(Send_To_ERP__c = true, Account.00Ni0000008s42l.Name = &apos;Credit Hold&apos;, Account.00Ni0000008s42l.Name &lt;&gt; &apos;Credit Card&apos;, RecordType.Name &lt;&gt; &apos;Sample Order&apos;)</errorConditionFormula>
        <errorMessage>This account is on credit hold.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Minimum_Advertised_Price_Not_Agreed_To</fullName>
        <active>false</active>
        <description>The minimum advertised pricing has not been agreed to.</description>
        <errorConditionFormula>AND(Send_To_ERP__c = true, Account.Minimum_Advertised_Pricing__c = false, RecordType.Name &lt;&gt; &apos;Sample Order&apos;)</errorConditionFormula>
        <errorMessage>The minimum advertised pricing has not been agreed to.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Need_By_Date_Greater_Than_Today</fullName>
        <active>false</active>
        <description>The Need By Date must be greater than or equal to today.</description>
        <errorConditionFormula>AND(PRIORVALUE(Send_To_ERP__c) = false, Send_To_ERP__c = true, Need_By_Date__c &lt; Today())</errorConditionFormula>
        <errorDisplayField>Need_By_Date__c</errorDisplayField>
        <errorMessage>The Need By Date must be greater than or equal to today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Need_By_Date_Required</fullName>
        <active>false</active>
        <description>A Need By Date is required to create an ERP sales order.</description>
        <errorConditionFormula>AND(Send_To_ERP__c = true, ISBLANK(Need_By_Date__c), RecordType.Name &lt;&gt; &apos;Sample Order&apos;)</errorConditionFormula>
        <errorMessage>A Need By Date is required to create an ERP sales order.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OSF_DWback__Required_Account_for_Opportunities</fullName>
        <active>true</active>
        <description>This validation rule ensures that the Account is always required when an Opportunity is created. As a result, Opportunities which are not related to an Account cannot be inserted via integrations.</description>
        <errorConditionFormula>AccountId = null &amp;&amp;  OSF_DWback__DW_ID__c != null</errorConditionFormula>
        <errorMessage>The Opportunity MUST be associated with an Account in order to be created. Perform the necessary changes and please try again.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OTS_Fields_Not_Completed</fullName>
        <active>false</active>
        <description>To use a one time ship to the following fields are required:
OTS Name,
OTS Address1,
OTS City,
OTS State,
OTS Zip,
OTS Country,
OTS Phone</description>
        <errorConditionFormula>AND(UseOTS__c,OR(ISBLANK(OTSName__c),ISBLANK(OTSAddress1__c),ISBLANK(OTSCity__c),ISBLANK(OTSState__c),ISBLANK(OTSZip__c),ISBLANK(OTSCountry__c),ISBLANK(OTSPhoneNum__c)))</errorConditionFormula>
        <errorMessage>To use a one time ship to the following fields are required:
OTS Name,
OTS Address1,
OTS City,
OTS State,
OTS Zip,
OTS Country,
OTS Phone</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Closed_Lost_Reason_Required</fullName>
        <active>true</active>
        <description>This rule enforces the user to enter a closed lost reason when ever he wants to change the status to closed lost.</description>
        <errorConditionFormula>IF( AND( ISPICKVAL(StageName,&quot;Closed Lost&quot;),ISBLANK(TEXT(Closed_Lost_Reason__c))) , true, false)</errorConditionFormula>
        <errorDisplayField>Closed_Lost_Reason__c</errorDisplayField>
        <errorMessage>Please enter the Closed Lost reason for Closed Lost Opportunities.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Products_Required</fullName>
        <active>true</active>
        <description>Opportunity products are required in order to send to ERP. Please add at least one product</description>
        <errorConditionFormula>AND(
Count_Opportunity_Products__c &lt; 1,
Send_To_ERP__c = TRUE
)</errorConditionFormula>
        <errorMessage>Opportunity products are required in order to send to ERP. Please add at least one product</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OrderPlacedDate</fullName>
        <active>false</active>
        <description>making sure order placed date is current date</description>
        <errorConditionFormula>if(DATEVALUE(Order_Placed__c)=Today(),False,True)</errorConditionFormula>
        <errorDisplayField>Order_Placed__c</errorDisplayField>
        <errorMessage>Order Placed date must equal Today&apos;s date. Please change this value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Order_Placed_Date_Required</fullName>
        <active>true</active>
        <description>A Order Placed date is required to create an ERP sales order.</description>
        <errorConditionFormula>AND(Send_To_ERP__c = true, ISBLANK(Order_Placed__c), RecordType.Name &lt;&gt; &apos;Sample Order&apos;)</errorConditionFormula>
        <errorMessage>A Order Placed date is required to create an ERP sales order.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Order_Placed_in_Future</fullName>
        <active>false</active>
        <description>Order placed date cannot be in the future - Request deploy by J. Kubala</description>
        <errorConditionFormula>Order_Placed__c &gt; Now()</errorConditionFormula>
        <errorMessage>Order placed date cannot be in the future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PO_Number_Required</fullName>
        <active>true</active>
        <description>A PO Number is required to create an ERP sales order.</description>
        <errorConditionFormula>AND(Send_To_ERP__c = true, ISBLANK(PO_Number__c))</errorConditionFormula>
        <errorMessage>A PO Number is required to create an ERP sales order.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payment_Terms_Not_Selected</fullName>
        <active>false</active>
        <description>Payment terms have not been selected.</description>
        <errorConditionFormula>AND(Send_To_ERP__c, Account.00Ni0000008s42l = &apos;&apos;)</errorConditionFormula>
        <errorMessage>Payment terms have not been selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Prebook_Opp_Stage_Change</fullName>
        <active>false</active>
        <description>An opportunity stage cannot be manually set to or change from processing or closed won.</description>
        <errorConditionFormula>AND(ISCHANGED(StageName), ISPICKVAL(StageName,&quot;Processing&quot;))</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>An opportunity stage cannot be changed from Approved Prebook</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Specific_Opp_Stage_Change</fullName>
        <active>false</active>
        <description>An opportunity stage cannot be manually set to or change from processing or closed won.</description>
        <errorConditionFormula>AND(ISCHANGED(StageName), 
ISPICKVAL(PRIORVALUE( StageName ), &quot;Closed Won&quot;))</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>An opportunity stage cannot be manually set to or change from processing or closed won.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_ShipTo_Or_OTS_For_ERP_SO</fullName>
        <active>false</active>
        <description>A valid Ship To (or OTS) is required to request an Epicor sales order.</description>
        <errorConditionFormula>AND(Send_To_ERP__c, NOT(PRIORVALUE(Send_To_ERP__c)), ISBLANK(Ship_To__c), NOT(UseOTS__c),RecordType.Name != &apos;Sample Order&apos;)</errorConditionFormula>
        <errorDisplayField>Ship_To__c</errorDisplayField>
        <errorMessage>A valid Ship To (or OTS) is required to request an Epicor sales order.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Resale_Certificate_Not_On_File</fullName>
        <active>false</active>
        <description>This account does not have a resale certificate on file.</description>
        <errorConditionFormula>AND(Send_To_ERP__c = true, Account.Resale_Id__c = &apos;&apos;, RecordType.Name &lt;&gt; &apos;Sample Order&apos;)</errorConditionFormula>
        <errorMessage>This account does not have a resale certificate on file.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Order_Already_Exists</fullName>
        <active>false</active>
        <description>A sales order has already been created for this opportunity.</description>
        <errorConditionFormula>AND(Send_To_ERP__c = true, Sales_Order__c &lt;&gt; &apos;&apos;)</errorConditionFormula>
        <errorMessage>A sales order has already been created for this opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Order_Request_Already_Sumbitted</fullName>
        <active>false</active>
        <description>Your request to create an ERP sales order has already been submitted.</description>
        <errorConditionFormula>AND(Send_To_ERP__c = true, Sent_To_ERP__c = true)</errorConditionFormula>
        <errorMessage>Your request to create an ERP sales order has already been submitted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ShipTo_contact_is_not_valid_ERP_contact</fullName>
        <active>false</active>
        <description>The selected shipto contact does not existing in the ERP system.</description>
        <errorConditionFormula>AND(Ship_To_Contact__c &lt;&gt; &apos;&apos;, ISBLANK(00Ni000000AkJ66.00Ni0000008s43Z),Send_To_ERP__c)</errorConditionFormula>
        <errorMessage>The selected shipto contact does not existing in the ERP system.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ShipTo_is_not_valid_ERP_ShipTo</fullName>
        <active>false</active>
        <description>The selected shipto does not existing in the ERP system.</description>
        <errorConditionFormula>AND(Ship_To__c &lt;&gt; &apos;&apos;, ISBLANK(00Ni000000AkJ61.00Ni0000008s42g),Send_To_ERP__c)</errorConditionFormula>
        <errorMessage>The selected shipto does not existing in the ERP system.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Terms_and_Conditions_Not_Agreed_To</fullName>
        <active>false</active>
        <description>Terms and conditions have not been agreed.</description>
        <errorConditionFormula>AND(Send_To_ERP__c = true, Account.Terms_and_Conditions__c = false, RecordType.Name &lt;&gt; &apos;Sample Order&apos;)</errorConditionFormula>
        <errorMessage>Terms and conditions have not been agreed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_Credit_Card_Number</fullName>
        <active>false</active>
        <description>Please enter a valid credit card number without spaces, dashes, or non-numeric characters (16 digits for Visa/Mastercard/Discover, 15 digits for AMEX).</description>
        <errorConditionFormula>OR(AND(NOT(REGEX( Credit_Card_Number__c , &quot;[0-9]{16}&quot; )), LEN( Credit_Card_Number__c) &lt;&gt; 0,  $User.ProfileId &lt;&gt; &apos;00ei0000000KBhn&apos;, NOT(ISPICKVAL(Credit_Card_Type__c, &apos;AMEX&apos;)) ), AND(NOT(REGEX( Credit_Card_Number__c , &quot;[0-9]{15}&quot; )), LEN( Credit_Card_Number__c) &lt;&gt; 0,  $User.ProfileId &lt;&gt; &apos;00ei0000000KBhn&apos;, ISPICKVAL(Credit_Card_Type__c, &apos;AMEX&apos;) ))</errorConditionFormula>
        <errorMessage>Please enter a valid credit card number without spaces, dashes, or non-numeric characters (16 digits for Visa/Mastercard/Discover, 15 digits for AMEX).</errorMessage>
    </validationRules>
</CustomObject>